NEWS for Libp11 -- History of user visible changes

New in 0.2.4; 2008-??-??
* added PKCS11_CTX_init_args (David Smith).

New in 0.2.3; 2007-07-11; Andreas Jellinghaus
* update wiki export script (add images, fix links).
* replaced rsa header files from rsalabs (official) with scute (open source).
* allow CKR_USER_ALREADY_LOGGED_IN on C_Login.
* mark internal functions as static.
* add code to store public keys and generate keys.